<resources>
    <string name="app_name">Hanami</string>
    <string name="open_navigation">Open Navigation Drawer</string>
    <string name="close_navigation">Close Navigation Drawer</string>
    <string name="home_nav">Home</string>
    <string name="hanami_flower_image_recognition_app">Hanami: Flower Image Recognition App</string>
    <string name="contact_hanami_com">contact@Hanami.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="Settings">settings</string>
    <string name="diseases">Diseases</string>
    <string name="Rate_us">Rate us</string>
    <string name="about_us">About us</string>
    <string name="camera_button">Camera Button</string>
    <string name="choose_a_photo">Choose a photo</string>
    <string name="empty" />
    <string name="camera_option">Use your device\'s camera</string>
    <string name="gallery_option">Upload from gallery</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_activity_flower">FlowerActivity</string>
    <string name="flowers">Flowers</string>
    <string name="result_header">Flower Name:</string>
    <string name="toxic_header">\nToxicity:</string>
    <string name="toxic_body_pos">Be careful when handling this flower because it is toxic!\n\n</string>
    <string name="toxic_body_neg">This flower is not toxic to humans and will not cause them any harm.\n\n</string>
    <string name="cult_header">Growing Conditions:</string>
    <string name="title_activity_disease">DiseaseActivity</string>
    <string name="title_activity_classifier">ClassifierActivity</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="predict">predict</string>
    <string name="blank" />
    <string name="submit_rating">Submit Rating</string>
    <string name="feedback_msg">We appreciate your feedback!</string>
    <string name="title_activity_rate">RateActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about_us_desc">Welcome to Hanami, the flower image classification app! We\'re passionate about flowers and technology, and we\'ve combined the two to create a seamless and enjoyable experience for flower enthusiasts everywhere.\n\nWe have worked tirelessly to bring you an app that not only identifies flowers with accuracy but also educates and inspires users about the beauty of the botanical world.\n\nWith our app, you can snap a photo of any flower you come across, and our advanced AI algorithms will quickly analyze it, providing you with detailed information about its species, toxicity, and growing conditions.</string>
    <string name="logo" />
    <string name="contact_msg">To contact us, please send an email to:</string>
    <string name="get_started">To Get Started:</string>
    <string name="press_flower">• Press the flower button below to see information on more than 100 flowers.</string>
    <string name="press_disease">• Press the diseases button to get to know the most common flower diseases and how to treat them.</string>
    <string name="press_camera">• Press the camera button to recognize flower species.</string>
    <string name="why_choose_our_app">Why Choose Our App?</string>
    <string name="why_choose_1">• Accurate Identification: Our advanced AI algorithms ensure precise identification of any flower.</string>
    <string name="why_choose_2">• Detailed Content: Our app provides all the information you need for flower care and disease treatment.</string>
    <string name="why_choose_3">• User-Friendly Interface: Easy-to-use design for seamless navigation and enjoyment.</string>
    <string name="Powdery_Mildew">Powdery Mildew</string>
    <string name="Grey_Mold">Grey Mold</string>
    <string name="Blackspot">Blackspot</string>
    <string name="Botrytis">Botrytis</string>
    <string name="Root_Rot">Root Rot</string>
    <string name="Leaf_Rust">Leaf Rust</string>
    <string name="Fire_Blight">Fire Blight</string>
    <string name="Verticillium_Wilt">verticillium Wilt</string>
    <string name="Sooty">Sooty</string>
    <string-array name="disease_names">
        <item>Powdery Mildew</item>
        <item>Grey Mold</item>
        <item>Blackspot</item>
        <item>Botrytis</item>
        <item>Root Rot</item>
        <item>Leaf Rust</item>
        <item>Fire Blight</item>
        <item>Verticillium Wilt</item>
        <item>Sooty</item>
    </string-array>
    <string name="Powdery_Mildew_desc">Powdery mildew appears as a white, powdery covering the leaf surfaces, as the name implies. The term refers to a group of closely related fungal species that affect one or even more plants. As a result, the powdery mildew on your lavender might not be the same as the one that’s wreaking havoc on your rose flower.\n\nIf the infection is severe, it may appear on stems and even the flowers themselves. Leaves that have been affected end up turning yellowish, then brown.</string>
    <string name="Grey_Mold_desc">Grey mold is one of the most common flower diseases. It’s especially troublesome when there’s a lot of rain and it’s cold outside. Gray mold, like powdery mildew, has a catchy name. It manifests itself as a grey mold on old and dying leaves and flowers. It starts as water-soaked spots and progresses to a grey, fuzzy coat.</string>
    <string name="Blackspot_desc">This is a fungal infection that affects roses, as well as other flowers and fruits. While it does not kill plants, it makes them weak and more vulnerable to other issues. Some black spots appear on the foliage during the cold season, causing the leaves to turn yellow and then fall off.</string>
    <string name="Botrytis_desc">This fungal disease starts as fluffy, grey growth on flowers and quickly spreads to the stems, causing plants to become weak and cracked. Botrytis blight is typically controlled through better growing conditions and hygiene. Causes damage in flowers such as Rosa, Gerbera, chrysanthemum, and Lisianthus",</string>
    <string name="Root_Rot_desc">This soil-borne fungus stunts growth and causes wilting to leaves. Affected plant roots frequently have a wet, foul odor and a rotten appearance. Some plants may have black strands.</string>
    <string name="Leaf_Rust_desc">Leaf rust is an infection that damages flowering plants. It is frequently found on roses, hollyhocks, snapdragons, and daylilies. Rust diseases cause raised blisters on the undersurface of affected leaves, which rupture to release milky, bright yellow to red spores.\n\n The infection does not kill the plant completely, but weakens over time, making it more vulnerable to other diseases and winter damages.</string>
    <string name="Fire_Blight_desc">This bacterial infection typically affects flowering plants, causing brown and withered flowers to appear first, followed by brown or black leaves. Cankers may appear on branches. The disease, mostly during rainy seasons, usually begins on the plant’s top section then under the leaf surface.</string>
    <string name="Verticillium_Wilt_desc">This fungal disease causes wilting, as well as yellowing and drooping leaves. It usually appears first on the outer leaves. The Yellow patches turn brown and cover entire leaves, causing the plant to die.</string>
    <string name="Sooty_desc">Plants with sooty mold have flecked stems and leaves. It has a black layer that you can easily wipe away with your fingers. The mold is drawn to the sweet “honeydew” that aphids and other sucking insects leave behind.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="hanami_terms_and_conditions">Hanami - Terms and Conditions</string>
    <string name="terms_body">Please read these terms and conditions carefully before using Hanami. By accessing or using the Service, you agree to be bound by these Terms. If you disagree with any part of the terms, then you may not access the Service.</string>
    <string name="description_of_service">1. Description of Service</string>
    <string name="description_of_service_body">Hanami: Flower Image Recognition App is designed to identify and provide information about various types of flowers through image recognition technology. The app utilizes a database of flower images and related information to provide users with accurate identifications and details about flowers, flower care, and disease treatment.</string>
    <string name="accuracy_of_information">2. Accuracy of Information</string>
    <string name="accuracy_of_information_body">While we strive to provide accurate and up-to-date information, we cannot guarantee the accuracy, completeness, or reliability of any content within the app. Users acknowledge that the information provided by the app is for educational purposes only and should not be relied upon as a sole source of information.</string>
    <string name="user_conduct">3. User Conduct</string>
    <string name="user_conduct_body">Users agree to use Hanami: Flower Image Recognition App in a manner consistent with all applicable laws and regulations. Users may not use the app for any unlawful purpose or to violate the rights of others.</string>
    <string name="privacy_policy_terms">4. Privacy Policy</string>
    <string name="privacy_policy_terms_body">Our Privacy Policy governs the collection, use, and disclosure of personal information by the Flower Recognition app. By using the app, you consent to the terms of our Privacy Policy.</string>
    <string name="intellectual_property">5. Intellectual Property</string>
    <string name="intellectual_property_body">Hanami: Flower Recognition app and all of its original content are the sole property of Hanami Users may not reproduce, modify, distribute, or otherwise exploit any part of the app without prior written permission from us.</string>
    <string name="limitation_of_liability">6. Limitation of Liability</string>
    <string name="limitation_of_liability_body">In no event shall Hanami be liable for any indirect, incidental, special, consequential, or punitive damages, including but not limited to, loss of profits, data, or other intangible losses arising out of or in connection with your use of Hanami: Flower Image Recognition App.</string>
    <string name="changes_to_terms">7. Changes to Terms</string>
    <string name="changes_to_terms_body">We reserve the right to modify or replace these Terms at any time. Users are responsible for regularly reviewing these Terms for any changes. Continued use of the app after any such changes shall constitute your consent to such changes.</string>
    <string name="termination">8. Termination</string>
    <string name="termination_body">We reserve the right to terminate or suspend access to Hanami: Flower Image Recognition app without prior notice or liability for any reason whatsoever, including without limitation if you breach the Terms.</string>
    <string name="governing_law">9. Governing Law</string>
    <string name="governing_law_body">These Terms shall be governed and construed in accordance with the laws of The Arab Republic of Egypt, without regard to its conflict of law provisions.</string>
    <string name="contact_us">10. Contact Us</string>
    <string name="contact_us_body">If you have any questions about these Terms, please contact us at:</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="final_agreement_terms">By using the Flower Recognition app, you agree to these Terms and Conditions. If you do not agree to abide by the terms of this agreement, you are not authorized to use or access the Service.</string>
</resources>