<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"/>

    <item
        android:id="@+id/flowers"
        android:icon="@drawable/flower"
        android:title="@string/flowers"/>

    <item
        android:id="@+id/none"
        android:title="@string/blank"
        android:checkable="false" />


    <item
        android:id="@+id/Diseases"
        android:icon="@drawable/baseline_medical_services_24"
        android:title="@string/diseases"/>

    <item
        android:id="@+id/rate"
        android:icon="@drawable/baseline_star_rate_24"
        android:title="@string/Rate_us"/>

</menu>