<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">


        <group>
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/baseline_home_24"
                    android:title="@string/home_nav"/>


                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/baseline_info_outline_24"
                    android:title="@string/about_us"/>
        </group>

        <group>
                <item
                    android:id="@+id/nav_privacy"
                    android:icon="@drawable/shield"
                    android:title="@string/privacy_policy"/>
                <item
                    android:id="@+id/nav_terms"
                    android:icon="@drawable/note_text"
                    android:title="@string/terms_and_conditions"/>
        </group>




</menu>