<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <!-- to get started -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/get_started"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="200dp">
        <!-->header<!-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_started"
            android:textSize="25sp"
            android:textColor="@color/lavender"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:textIsSelectable="true"/>
        <!-->first option<!-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/press_flower"
            android:textSize="20sp"
            android:textColor="@color/lavender"
            android:layout_marginBottom="6dp"
            android:textIsSelectable="true"/>
        <!-->second option<!-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/press_disease"
            android:textSize="20sp"
            android:textColor="@color/lavender"
            android:layout_marginBottom="6dp"
            android:textIsSelectable="true"/>

        <!-->third option<!-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/press_camera"
            android:textSize="20sp"
            android:textColor="@color/lavender"
            android:textIsSelectable="true"/>
    </LinearLayout>





    <!-- Footer Copyright -->
    <TextView
        android:id="@+id/footer_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/get_started"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="© 2024 Hanami. All rights reserved."
        android:textColor="@color/lavender"
        android:textSize="12sp"
        android:textIsSelectable="true"/>

</RelativeLayout>